
IMPORTANT: use 'script/autospec' (or just 'autospec' if you have the rspec gem
installed) instead of 'autotest'. We changed the way autotest discovers rspec
so the autotest executable won't automatically load rspec anymore. This allows
rspec to live side by side other spec frameworks without always co-opting
autotest through autotest's discovery mechanism.

* Generated route specs have shorter names, making it less painful to modify their implementation
* Add conditional so Rails 2.1.0 doesn't warn about cache_template_extensions (patch from James Herdman)
* Fixed stub_model examples to work with Rails 2.1.0 (the code was fine, just the examples needed patching)
* use hoe for build/release
* reworked generated examples for rspec_scaffold - thanks to Mikel Lindsaar and Dan Manges for their feedback
* bye, bye translator
* Added proxy to cookies so you can set them in examples the same way you set them in controllers
* Added script/autospec so you can run autospec without installing the gem
* Support --skip-fixture in the rspec_model generator (patches from Alex Tomlins and Niels Ganser)
* Add mock_model#as_new_record (patch from Zach Dennis)

=== Version 1.1.4

Maintenance release.

* Moved mock_model and stub_model to their own module: Spec::Rails::Mocks
* Setting mock_model object id with stubs hash - patch from Adam Meehan
* Added as_new_record to stub_model e.g. stub_model(Foo).as_new_record
* Improved stub_model such that new_record? does "the right thing"
* Patch from Pat Maddox to get integrate_views to work in nested example groups.
* Patch from Pat Maddox to get controller_name to work in nested example groups.
* Patch from Corey Haines to add include_text matcher
* Added stub_model method which creates a real model instance with :id stubbed and data access prohibited.
* Applied patch from Pat Maddox to handle redirect_to w/ SSL. Closes #320.
* Added #helper and #assigns to helper specs.