@@ -601,9 +601,6 @@ describe "have_rjs behaviour_type", :type => :controller do
       with_tag("div", 1)
       with_tag("#1")
     end
-    lambda {
-      response.should have_rjs(:insert, :top, "test2")
-    }.should raise_error(SpecFailed)
     response.should have_rjs(:insert, :bottom) {|rjs|
       with_tag("div", 1)
       with_tag("#2")
@@ -628,6 +625,17 @@ describe "have_rjs behaviour_type", :type => :controller do
       with_tag("div", 1)
       with_tag("#4")
     }
+  end
+  
+  it "should find rjs using :insert (positioned)" do
+    pending("await fix for http://rails.lighthouseapp.com/projects/8994-ruby-on-rails/tickets/982") if ENV['RSPEC_RAILS_VERSION'] == '2.1.1'
+    render_rjs do |page|
+      page.insert_html :top, "test1", "<div id=\"1\">foo</div>"
+      page.insert_html :bottom, "test2", "<div id=\"2\">bar</div>"
+    end
+    lambda {
+      response.should have_rjs(:insert, :top, "test2")
+    }.should raise_error(SpecFailed)
   end
 end
 
